--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body{
     color:white;
 }
 
-/* Canvas */
+/* CANVAS */
 canvas{
     position:fixed;
     top:0;
     left:0;
     width:100vw;
     height:100vh;
-    background: radial-gradient(circle at center, #111 0%, #000 70%);
+    background: radial-gradient(circle at center, #111 0%, #000 80%);
 }
 
 /* MENU */
@@ -30,7 +30,7 @@ canvas{
 }
 
 #menu h1{
-    font-size:clamp(32px,6vw,60px);
+    font-size:48px;
     margin-bottom:20px;
 }
 
